syntax = "proto3";

package pingpong;
option go_package = "github.com/scardozos/ping-grpc/api/proto/pingpong;pingpong;";

service PingPong {
	rpc Ping(PingRequest) returns (PongResponse) {}
	rpc PingStream(stream PingRequest) returns (stream PongResponse) {}
}

message PingRequest {
	string msg = 1;
}
message PongResponse {
	string msg = 1;
}
